# Surveys

backend/: .env  Cargo.toml
backend/migrations/: 20231201160407_init.down.sql  20231201160407_init.up.sql
backend/src/: config.rs  error.rs  logger.rs  main.rs
backend/src/controllers/: base.rs  mod.rs  survey.rs  survey_result.rs  user.rs
backend/src/models/: mod.rs  survey.rs  survey_result.rs  user.rs
backend/src/mv/: auth.rs  mod.rs  response_map.rs
backend/src/routers/: mod.rs  statics.rs
backend/src/routers/api/: auth.rs  mod.rs  survey_results.rs  surveys.rs
front-end/: 404.html  index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: App.tsx  index.css
front-end/src/components/Home/: Home.module.css  Home.tsx
front-end/src/components/Home/Question/: Question.module.css  Question.tsx
front-end/src/components/SurveySearchBar/: SurveySearchBar.module.css  SurveySearchBar.tsx
front-end/src/components/Welcome/: Welcome.module.css  Welcome.tsx
front-end/src/components/Welcome/LoginModal/: LoginModal.module.css  LoginModal.tsx
front-end/src/components/Welcome/SignupModal/: SignupModal.module.css  SignupModal.tsx
front-end/src/shared/Button/: Button.module.css  Button.tsx
front-end/src/shared/Input/: Input.module.css  Input.tsx
front-end/src/shared/Modal/: Modal.module.css  Modal.tsx
