[package]
name = "surveys-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }

sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "time",
    "uuid",
] }
argon2 = "0.5.2"
jsonwebtoken = "9.2.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3"

time = { version = "0.3.30", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rand_core = { version = "0.6.4", features = ["std"] }
strum_macros = "0.25"
dotenvy = "0.15.7"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
